# mx

./: .clang-format  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.coverage.dockerignore  LICENSE  Makefile  Package.swift  README.md
.claude/: .gitignore  CLAUDE.md  settings.json
.github/workflows/: ccpp.yml.archived  ci.yaml  pr-comment.yaml  replace-claude.yaml
audit/: README.md  __init__.py  __main__.py  classify.py  discover.py  extract.py  featuresfile.py  summary.py
audit/tests/: test_classify.py
cmake/: GitSha.cmake
data/: README.md  api.features.xml  corpus.xml
data/custom/: musescore-slur-start-stop.features.xml  segno_coda_roundtrip.3.0.features.xml  segno_coda_roundtrip.3.0.xml  segno_coda_roundtrip.3.1.features.xml  segno_coda_roundtrip.3.1.xml  systems-and-pages.features.xml  transposition.features.xml
data/foundsuite/: 12 Horn Duets.features.xml  ARBEAU Belle qui tiens ma vie.features.xml  Adagio and Fugue in C minor, K.546.features.xml  An Chloe.features.xml  Berlioz_Le_Corsaire.features.xml  Black Note Study Op 10 no 5.features.xml  Deutscher Tanz D.820.1.features.xml  Deutscher Tanz D.820.1.fixup.xml  Deutscher Tanz D.820.1.xml.invalid  Invention 1.features.xml  Invention 2.features.xml  Invention 3.features.xml  Invention_10.features.xml  Invention_11.features.xml  Invention_12.features.xml  Invention_13.features.xml  Invention_14.features.xml  Invention_15.features.xml  Invention_4.features.xml  Invention_5.features.xml  Invention_6.features.xml  Invention_7.features.xml  Invention_8.features.xml  Invention_9.features.xml  Moments Musicaux Op16 No4.features.xml  O_Holy_Night-Adam-1871.features.xml  O_Holy_Night-Adam-1871.fixup.xml  O_Holy_Night-Adam-1871.xml.invalid  O_Holy_Night-Adam-1974.features.xml  O_Holy_Night.features.xml  O_Holy_Night.fixup.xml  O_Holy_Night.xml.invalid  PepAiraSco.features.xml  PezR44Sco.features.xml  Rimsky-Korsakov Op11 No4.features.xml  Rimsky-Korsakov Op11 No4.xml.invalid  RonCLunSco.features.xml  SCHUBERT An die Sonne.features.xml  Schubert_der_Mueller.features.xml  Silent_Night-Hartwig.features.xml  (+3 more)
data/kiritan_singing/: SOURCE.txt  kiritan_singing_01.features.xml  kiritan_singing_02.features.xml  kiritan_singing_03.features.xml  kiritan_singing_04.features.xml  kiritan_singing_05.features.xml  kiritan_singing_06.features.xml  kiritan_singing_07.features.xml  kiritan_singing_08.features.xml  kiritan_singing_09.features.xml  kiritan_singing_10.features.xml  kiritan_singing_11.features.xml  kiritan_singing_12.features.xml  kiritan_singing_13.features.xml  kiritan_singing_14.features.xml  kiritan_singing_15.features.xml  kiritan_singing_16.features.xml  kiritan_singing_17.features.xml  kiritan_singing_18.features.xml  kiritan_singing_19.features.xml  kiritan_singing_20.features.xml  kiritan_singing_21.features.xml  kiritan_singing_22.features.xml  kiritan_singing_23.features.xml  kiritan_singing_24.features.xml  kiritan_singing_25.features.xml  kiritan_singing_26.features.xml  kiritan_singing_27.features.xml  kiritan_singing_28.features.xml  kiritan_singing_29.features.xml  kiritan_singing_30.features.xml  kiritan_singing_31.features.xml  kiritan_singing_32.features.xml  kiritan_singing_33.features.xml  kiritan_singing_34.features.xml  kiritan_singing_35.features.xml  kiritan_singing_36.features.xml  kiritan_singing_37.features.xml  kiritan_singing_38.features.xml  kiritan_singing_39.features.xml  (+11 more)
data/ksuite/: Bombe.features.xml  k001a_Articulations.features.xml  k001b_Articulations_Above.features.xml  k001c_Articulations_Below.features.xml  k002a_Fermatas.features.xml  k003a_Ornaments.features.xml  k004a_Technical.features.xml  k005a_Spanners_Slides.features.xml  k006a_Clefs_sign_G_ln_2_oct_0_Treble.features.xml  k006a_Header_Scaling_Decimals.features.xml  k006b_Clefs_sign_F_ln_4_oct_0_Bass.features.xml  k006c_Clefs_sign_C_ln_3_oct_0_Viola.features.xml  k006d_Clefs_sign_C_ln_4_oct_0_Tenor.features.xml  k006e_Clefs_sign_C_ln_5_oct_0_Baritone.features.xml  k006f_Clefs_sign_C_ln_1_oct_0_Soprano.features.xml  k006g_Clefs_sign_C_ln_2_oct_0_Mezzo_Soprano.features.xml  k006h_Clefs_sign_G_ln_1_oct_0_French.features.xml  k006i_Clefs_sign_F_ln_3_oct_0_Varbaritone.features.xml  k006j_Clefs_sign_F_ln_5_oct_0_Subbass.features.xml  k006k_Clefs_sign_G_ln_2_oct_neg2_G_15MB.features.xml  k006l_Clefs_sign_G_ln_2_oct_neg1_G_8VB.features.xml  k006m_Clefs_sign_G_ln_2_oct_1_G_8VA.features.xml  k006n_Clefs_sign_G_ln_2_oct_2_G_15MA.features.xml  k006o_Clefs_sign_F_ln_4_oct_neg2_F_15MB.features.xml  k006p_Clefs_sign_F_ln_4_oct_neg1_F_8VB.features.xml  k006q_Clefs_sign_F_ln_4_oct_1_F_8VA.features.xml  k006r_Clefs_sign_F_ln_4_oct_2_F_15MA.features.xml  k006s_Clefs_sign_percussion_ln_3_oct_0_Percussion.features.xml  k006t_Clefs_sign_TAB_ln_3_oct_0_Tab.features.xml  k006u_Clefs_sign_jianpu_ln_3_oct_0_Jianpu.features.xml  k006v_Clefs_sign_none_ln_3_oct_0_None.features.xml  k007a_Notations_Dynamics.features.xml  k007b_Notations_Dynamics_Attributes.features.xml  k007c_Directions_Dynamics.features.xml  k007d_Directions_Dynamics_Attributes.features.xml  k008a_Beaming.features.xml  k009a_Slurs.features.xml  k009b_Slur_Attributes.features.xml  k010a_Ties.features.xml  k010b_Bad_Ties.features.xml  (+8 more)
data/logicpro/: logic01a_homoSapiens.features.xml
data/lysuite/: ly01a_Pitches_Pitches.features.xml  ly01b_Pitches_Intervals.features.xml  ly01c_Pitches_NoVoiceElement.features.xml  ly01d_Pitches_Microtones.features.xml  ly01e_Pitches_ParenthesizedAccidentals.features.xml  ly01e_Pitches_ParenthesizedAccidentals.xml  ly01e_Pitches_ParenthesizedAccidentals.xml.invalid  ly01f_Pitches_ParenthesizedMicrotoneAccidentals.features.xml  ly02a_Rests_Durations.features.xml  ly02b_Rests_PitchedRests.features.xml  ly02c_Rests_MultiMeasureRests.features.xml  ly02d_Rests_Multimeasure_TimeSignatures.features.xml  ly02e_Rests_NoType.features.xml  ly03a_Rhythm_Durations.features.xml  (+120 more)
docs/: musicxml-3.0-5fd8eb3.xsd  musicxml-3.1-8bbe8e5.xsd  musicxml-4.1-0d56097.xsd  musicxml.xsd
xcode/: build_xcframework.sh
(+3082 files in other folders)
