cmake_minimum_required(VERSION 3.13)
project(mx)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CPP_VERSION 17)

option(MX_BUILD_TESTS "build or skip the test suite" OFF)

option(
    MX_BUILD_CORE_TESTS
    "build or skip the tests in the 'core' namespace, requires MX_BUILD_TESTS"
    OFF
)

option(
    MX_CORE_DEV
    "Build only mx/core + ezxml + utility plus the core roundtrip test binary."
    OFF
)

option(
    MX_COVERAGE
    "Instrument the build for gcov coverage (GCC/Clang only)."
    OFF
)

# Coverage instrumentation. add_compile_options/add_link_options affect every
# target created after this point, so a core-dev + coverage configure only
# instruments the core-dev TUs (mx-core + mxtest-core-dev); nothing else is
# compiled in that mode. gcovr then filters the report to src/private/mx/core/.
if(MX_COVERAGE)
    if(MSVC)
        message(FATAL_ERROR "MX_COVERAGE is not supported with MSVC")
    endif()
    message(STATUS "${PROJECT_NAME}: MX_COVERAGE=ON: building with --coverage")
    add_compile_options(--coverage -O0 -g)
    add_link_options(--coverage)
endif()

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

set(SOURCE_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(PRIVATE_DIR "${SOURCE_ROOT}/private")
set(PUBLIC_DIR "${SOURCE_ROOT}/include")

file(GLOB_RECURSE HEADERS_MX_API ${PUBLIC_DIR}/mx/api/*.h)
file(GLOB_RECURSE SRC_MX_API ${PRIVATE_DIR}/mx/api/*.cpp ${PRIVATE_DIR}/mx/api/*.h)
file(GLOB_RECURSE SRC_MX_CORE ${PRIVATE_DIR}/mx/core/*.c* ${PRIVATE_DIR}/mx/core/*.h*)
file(GLOB_RECURSE SRC_MX_IMPL ${PRIVATE_DIR}/mx/impl/*.cpp ${PRIVATE_DIR}/mx/impl/*.h)
file(GLOB_RECURSE SRC_MX_UTILITY ${PRIVATE_DIR}/mx/utility/*.cpp ${PRIVATE_DIR}/mx/utility/*.h)
file(GLOB_RECURSE SRC_MX_EZXML ${PRIVATE_DIR}/mx/ezxml/*.cpp ${PRIVATE_DIR}/mx/ezxml/*.h*)

file(GLOB_RECURSE SRC_MX_TEST_API ${PRIVATE_DIR}/mxtest/api/*.cpp ${PRIVATE_DIR}/mxtest/api/*.h)
file(GLOB_RECURSE SRC_MX_TEST_CONTROL ${PRIVATE_DIR}/mxtest/control/*.cpp ${PRIVATE_DIR}/mxtest/control/*.h)
file(GLOB_RECURSE SRC_MX_TEST_FILE ${PRIVATE_DIR}/mxtest/file/*.cpp ${PRIVATE_DIR}/mxtest/file/*.h)
file(GLOB_RECURSE SRC_MX_TEST_IMPL ${PRIVATE_DIR}/mxtest/impl/*.cpp ${PRIVATE_DIR}/mxtest/impl/*.h)
file(GLOB_RECURSE SRC_MX_TEST_CORE ${PRIVATE_DIR}/mxtest/core/*.cpp ${PRIVATE_DIR}/mxtest/core/*.h)
file(GLOB_RECURSE SRC_MX_TEST_IMPORT ${PRIVATE_DIR}/mxtest/import/*.cpp ${PRIVATE_DIR}/mxtest/import/*.h)
file(GLOB_RECURSE SRC_MX_TEST_UTILITY ${PRIVATE_DIR}/mxtest/utility/*.cpp ${PRIVATE_DIR}/mxtest/utility/*.h)
file(GLOB_RECURSE SRC_MX_CORE_ROUNDTRIP ${PRIVATE_DIR}/mxtest/corert/*.cpp ${PRIVATE_DIR}/mxtest/corert/*.h)

# Helpers from mxtest/import/ that the core roundtrip suite reuses. Kept as
# an explicit list (not a glob) because we want exactly these two unguarded
# helpers and not the rest of the api import suite. Both translation units
# have no #ifdef guards and depend only on mx/ezxml; they satisfy the
# Dual-Compilation Invariant (design §2). DecimalFields.h is header-only
# and is picked up transitively via include paths.
set(SRC_MX_CORE_ROUNDTRIP_HELPERS
    ${PRIVATE_DIR}/mxtest/import/ChangeValues.cpp
    ${PRIVATE_DIR}/mxtest/import/ChangeValues.h
    ${PRIVATE_DIR}/mxtest/import/SortAttributes.cpp
    ${PRIVATE_DIR}/mxtest/import/SortAttributes.h
    ${PRIVATE_DIR}/mxtest/import/DecimalFields.h
)
file(GLOB_RECURSE SRC_CPUL ${PRIVATE_DIR}/cpul/*.cpp ${SOURCE}/cpul/*.h)

# PathRoot.h is consumed by the api import suite (via MxFileRepository) and by
# the core roundtrip suite (file discovery under data/). Generated in both
# build branches so MX_REPO_ROOT_PATH is always available.
file(WRITE ${PRIVATE_DIR}/mxtest/file/PathRoot.h
    "// This file was auto-generated by CMake
#pragma once

// The absolute path to the root of the repository.
#ifndef MX_REPO_ROOT_PATH
#define MX_REPO_ROOT_PATH \"${CMAKE_CURRENT_SOURCE_DIR}\"
#endif
"
)

if(MX_CORE_DEV)

    # =========================================================================
    # Core-dev branch: trimmed build for codegen iteration on mx/core.
    #
    # Builds only mx/core + mx/ezxml + mx/utility into a static library
    # `mx-core`, plus a `mxtest-core-dev` executable containing the core
    # roundtrip suite. mx/api, mx/impl, and all other test suites are not
    # compiled here. MX_BUILD_TESTS / MX_BUILD_CORE_TESTS / MX_BUILD_EXAMPLES
    # are ignored in this branch.
    # =========================================================================

    message(STATUS "${PROJECT_NAME}:${CMAKE_CURRENT_LIST_LINE} MX_CORE_DEV=ON: trimmed core-dev build")

    # mx-core static library: only core + ezxml + utility.
    add_library(mx-core STATIC ${SRC_MX_CORE} ${SRC_MX_UTILITY} ${SRC_MX_EZXML})
    source_group("core" FILES ${SRC_MX_CORE})
    source_group("utility" FILES ${SRC_MX_UTILITY})
    source_group("ezxml" FILES ${SRC_MX_EZXML})
    set_property(TARGET mx-core PROPERTY CXX_STANDARD ${CPP_VERSION})

    if(MSVC)
        target_compile_options(mx-core PRIVATE /W4)
    else()
        target_compile_options(mx-core PRIVATE -Wall -Wextra)
    endif()

    target_include_directories(mx-core PRIVATE ${PRIVATE_DIR})
    target_include_directories(mx-core PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/include")
    target_include_directories(mx-core PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/private")
    target_include_directories(mx-core PUBLIC
        $<BUILD_INTERFACE:${PUBLIC_DIR}>
    )

    # mxtest-core-dev executable. Phase A: SRC_MX_CORE_ROUNDTRIP is empty
    # (no files under mxtest/corert/ yet). cpul provides Catch2's main(), so
    # the executable links and exits 0 with no tests registered. Phase B adds
    # real sources into mxtest/corert/ and the glob picks them up.
    find_package(Threads)
    add_executable(mxtest-core-dev
        ${SRC_MX_CORE_ROUNDTRIP}
        ${SRC_MX_CORE_ROUNDTRIP_HELPERS}
        ${SRC_CPUL}
    )
    target_include_directories(mxtest-core-dev PRIVATE ${PRIVATE_DIR})
    target_include_directories(mxtest-core-dev PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/include")
    target_include_directories(mxtest-core-dev PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/private")
    target_link_libraries(mxtest-core-dev mx-core)
    target_link_libraries(mxtest-core-dev ${CMAKE_THREAD_LIBS_INIT})
    set_property(TARGET mxtest-core-dev PROPERTY CXX_STANDARD ${CPP_VERSION})

else()

    # =========================================================================
    # Normal branch: full build (mx library + optional tests + examples).
    # =========================================================================

    # mx static library
    add_library(${PROJECT_NAME} STATIC ${SRC_MX_API} ${SRC_MX_CORE} ${SRC_MX_IMPL} ${SRC_MX_UTILITY} ${SRC_MX_EZXML})
    source_group( "api-public" FILES ${HEADERS_MX_API})
    source_group( "api" FILES ${SRC_MX_API} )
    source_group( "core" FILES ${SRC_MX_CORE} )
    source_group( "impl" FILES ${SRC_MX_IMPL} )
    source_group( "utility" FILES ${SRC_MX_UTILITY} )
    source_group( "ezxml" FILES ${SRC_MX_EZXML} )
    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD ${CPP_VERSION})

    if(MSVC)
        target_compile_options(${PROJECT_NAME} PRIVATE /W4)
    else()
        target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra)
    endif()

    target_include_directories(${PROJECT_NAME} PRIVATE ${PRIVATE_DIR})

    # these header paths are a little different to make it easier to copy-and-paste the ezxml code over to
    # here http://github.com/webern/ezxml. However, as far as mx is concerned, ezxml is just another
    # namespace in the mx library (that has a slightly different #include path convention)
    target_include_directories(${PROJECT_NAME} PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/include")
    target_include_directories(${PROJECT_NAME} PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/private")

    target_include_directories(${PROJECT_NAME} PUBLIC
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
        $<BUILD_INTERFACE:${PUBLIC_DIR}>
    )

    # Install Package Configuration
    install(TARGETS ${PROJECT_NAME}
        EXPORT ${PROJECT_NAME}_targets
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
    )
    install(EXPORT ${PROJECT_NAME}_targets
        NAMESPACE ${PROJECT_NAME}::
        FILE ${PROJECT_NAME}-config.cmake
        DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/${PROJECT_NAME}"
    )
    install(DIRECTORY "${PUBLIC_DIR}/mx" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")

    # mxtest
    if(MX_BUILD_TESTS)
        set(TEST_BINARY_NAME mxtest)
        message(STATUS "${PROJECT_NAME}:${CMAKE_CURRENT_LIST_LINE} tests will be compiled")
        if(MX_BUILD_CORE_TESTS)
            message(STATUS "${PROJECT_NAME}:${CMAKE_CURRENT_LIST_LINE} core tests will be compiled")
            add_definitions(-DMX_COMPILE_CORE_TESTS)
        else()
            message(STATUS "${PROJECT_NAME}:${CMAKE_CURRENT_LIST_LINE} core tests will NOT be compiled")
        endif()
        find_package( Threads )

        # Core roundtrip suite is included in mxtest when MX_BUILD_CORE_TESTS=ON,
        # so it runs during `make test-all` alongside the api import, api, impl,
        # and per-element core suites. Gating on MX_BUILD_CORE_TESTS (not
        # MX_BUILD_TESTS) keeps `make test` fast.
        set(SRC_MX_CORE_ROUNDTRIP_IN_MXTEST "")
        if(MX_BUILD_CORE_TESTS)
            set(SRC_MX_CORE_ROUNDTRIP_IN_MXTEST ${SRC_MX_CORE_ROUNDTRIP})
        endif()

        add_executable(
                ${TEST_BINARY_NAME}
                ${SRC_MX_TEST_API}
                ${SRC_MX_TEST_CONTROL}
                ${SRC_MX_TEST_CORE}
                ${SRC_MX_TEST_FILE}
                ${SRC_MX_TEST_IMPL}
                ${SRC_MX_TEST_IMPORT}
                ${SRC_MX_TEST_UTILITY}
                ${SRC_MX_TEST_XML}
                ${SRC_MX_CORE_ROUNDTRIP_IN_MXTEST}
                ${SRC_CPUL}
        )

        target_include_directories(${TEST_BINARY_NAME} PRIVATE ${PRIVATE_DIR})

        # See above: ezxml has a slightly different path convention, and it is used by certain tests even though it is
        # not considered part of the public API of mx.
        target_include_directories(${TEST_BINARY_NAME} PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/include")
        target_include_directories(${TEST_BINARY_NAME} PRIVATE "${PRIVATE_DIR}/mx/ezxml/src/private")

        target_link_libraries(${TEST_BINARY_NAME} ${PROJECT_NAME})
        target_link_libraries(${TEST_BINARY_NAME} ${CMAKE_THREAD_LIBS_INIT})
        set_property(TARGET ${TEST_BINARY_NAME} PROPERTY CXX_STANDARD ${CPP_VERSION})
    else()
        message(STATUS "${PROJECT_NAME}:${CMAKE_CURRENT_LIST_LINE} tests will NOT be compiled")
    endif()

    # mx examples
    if(MX_BUILD_EXAMPLES)
        message(STATUS "${PROJECT_NAME}:${CMAKE_CURRENT_LIST_LINE} examples will be compiled")
        add_executable(mxread ${PRIVATE_DIR}/mx/examples/Read.cpp)
        add_executable(mxwrite ${PRIVATE_DIR}/mx/examples/Write.cpp)
        add_executable(mxhide ${PRIVATE_DIR}/mx/examples/Hide.cpp)
        target_link_libraries(mxread ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
        target_link_libraries(mxwrite ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
        target_link_libraries(mxhide ${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
        set_property(TARGET mxread PROPERTY CXX_STANDARD ${CPP_VERSION})
        set_property(TARGET mxwrite PROPERTY CXX_STANDARD ${CPP_VERSION})
        set_property(TARGET mxhide PROPERTY CXX_STANDARD ${CPP_VERSION})
    else()
        message(STATUS "${PROJECT_NAME}:${CMAKE_CURRENT_LIST_LINE} examples will NOT be compiled")
    endif()

endif()
